<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_gray_ribbon_bg"
        android:gravity="center" >

        <RadioGroup
            android:id="@+id/asetting_dialog_iconsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/asetting_dialog_iconsize_elarge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_filefolder_bg"
                android:button="@null"
                android:checked="false"
                android:drawableRight="@drawable/custom_radio"
                android:padding="12dp"
                android:text="@string/asetting_dialog_iconsize_elarge"
                android:textColor="@color/Black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/asetting_dialog_iconsize_large"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_filefolder_bg"
                android:button="@null"
                android:checked="false"
                android:drawableRight="@drawable/custom_radio"
                android:padding="12dp"
                android:text="@string/asetting_dialog_iconsize_large"
                android:textColor="@color/Black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/asetting_dialog_iconsize_normal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_filefolder_bg"
                android:button="@null"
                android:checked="false"
                android:drawableRight="@drawable/custom_radio"
                android:padding="12dp"
                android:text="@string/asetting_dialog_iconsize_normal"
                android:textColor="@color/Black"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/asetting_dialog_iconsize_small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_filefolder_bg"
                android:button="@null"
                android:checked="false"
                android:drawableRight="@drawable/custom_radio"
                android:padding="12dp"
                android:text="@string/asetting_dialog_iconsize_small"
                android:textColor="@color/Black"
                android:textSize="20sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/asetting_dialog_iconsize"
            android:gravity="center" >

            <Button
                android:id="@+id/asetting_dialog_iconsize_okbutton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Ok_button" />

            <Button
                android:id="@+id/asetting_dialog_iconsize_cancelbutton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/Cancel_button" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>