<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_gray_ribbon_bg"
        android:gravity="center" >
        <TextView
				android:id="@+id/dr_type"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/dialog_dinfor_type"
				android:gravity="right"
				android:layout_alignParentLeft="true"
				android:layout_alignParentTop="true"
				
				/>
        <TextView
				android:id="@+id/dr_type_val"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/hello_world"
				android:layout_toRightOf="@+id/dr_type"
				android:layout_alignParentRight="true"
				android:layout_alignParentTop="true"/>
        <!--  -->
        <TextView
				android:id="@+id/dr_path"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/dialog_dinfor_path"
				android:gravity="right"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/dr_type"				
				/>
        <TextView
				android:id="@+id/dr_path_val"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/hello_world"
				android:layout_toRightOf="@+id/dr_path"
				android:layout_below="@+id/dr_type_val"
				android:layout_alignParentRight="true"
				/>
        <!--  -->
        <TextView
				android:id="@+id/dr_contain"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/dialog_dinfor_contain"
				android:gravity="right"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/dr_path"				
				/>
        <TextView
				android:id="@+id/dr_contain_val"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/hello_world"
				android:layout_toRightOf="@+id/dr_path"
				android:layout_below="@+id/dr_path_val"
				android:layout_alignParentRight="true"
				/>
        <!--  -->
        <!--  -->
        <TextView
				android:id="@+id/dr_size"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/dialog_dinfor_size"
				android:gravity="right"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/dr_contain"				
				/>
        <TextView
				android:id="@+id/dr_size_val"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/hello_world"
				android:layout_toRightOf="@+id/dr_path"
				android:layout_below="@+id/dr_contain_val"
				android:layout_alignParentRight="true"
				/>
        <!--  -->
        <!--  -->
        <TextView
				android:id="@+id/dr_modified"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/dialog_dinfor_modified"
				android:gravity="right"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/dr_size"				
				/>
        <TextView
				android:id="@+id/dr_modified_val"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/hello_world"
				android:layout_toRightOf="@+id/dr_path"
				android:layout_below="@+id/dr_size_val"
				android:layout_alignParentRight="true"
				/>
        <!--  -->
        <!--  -->
        <TextView
				android:id="@+id/dr_readable"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/dialog_dinfor_readable"
				android:gravity="right"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/dr_modified"				
				/>
        <TextView
				android:id="@+id/dr_readable_val"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/hello_world"
				android:layout_toRightOf="@+id/dr_path"
				android:layout_below="@+id/dr_modified_val"
				android:layout_alignParentRight="true"
				/>
        <!--  -->
        <!--  -->
        <TextView
				android:id="@+id/dr_writeable"
				android:layout_width="90dp"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/dialog_dinfor_writeable"
				android:gravity="right"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/dr_readable"				
				/>
        <TextView
				android:id="@+id/dr_writeable_val"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:maxLines="1"
				android:padding="1dp"
				android:layout_margin="1dp"
				android:textColor="@color/Black"
				android:text="@string/hello_world"
				android:layout_toRightOf="@+id/dr_path"
				android:layout_below="@+id/dr_readable_val"
				android:layout_alignParentRight="true"
				/>
        <!--  -->
        <Button
            android:id="@+id/dr_okbt"
            android:layout_below="@+id/dr_writeable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ok_button" 
            />
    </RelativeLayout>

</ScrollView>